compiling_error.txt
In file included from C:\Users\Luis Freitas\Desktop\trabpoo\Mapa.h:11:0:
C:\Users\Luis Freitas\Desktop\trabpoo\Celula.h:15:3: error: extra qualification 'Celula::' on member 'Celula' [-fpermissive]
   Celula::Celula(int x0, int y0, char c0) :x(x0),y(y0), c(c0){
   ^~~~~~
C:\Users\Luis Freitas\Desktop\trabpoo\Celula.h:33:8: error: extra qualification 'Celula::' on member 'setX' [-fpermissive]
   void Celula::setX(int x0);
        ^~~~~~
C:\Users\Luis Freitas\Desktop\trabpoo\Celula.h:34:8: error: extra qualification 'Celula::' on member 'setY' [-fpermissive]
   void Celula::setY(int y0);
        ^~~~~~
C:\Users\Luis Freitas\Desktop\trabpoo\Celula.h:35:8: error: extra qualification 'Celula::' on member 'setCaract' [-fpermissive]
   char Celula::setCaract(char c0);
        ^~~~~~
C:\Users\Luis Freitas\Desktop\trabpoo\Celula.h:36:7: error: extra qualification 'Celula::' on member 'getX' [-fpermissive]
   int Celula::getX()const;
       ^~~~~~
C:\Users\Luis Freitas\Desktop\trabpoo\Celula.h:37:7: error: extra qualification 'Celula::' on member 'getY' [-fpermissive]
   int Celula::getY()const;
       ^~~~~~
C:\Users\Luis Freitas\Desktop\trabpoo\Celula.h:38:8: error: extra qualification 'Celula::' on member 'getCaract' [-fpermissive]
   char Celula::getCaract() const;
        ^~~~~~
C:\Users\Luis Freitas\Desktop\trabpoo\Celula.h:39:10: error: extra qualification 'Celula::' on member 'getAsString' [-fpermissive]
   string Celula::getAsString()const;
          ^~~~~~
C:\Users\Luis Freitas\Desktop\trabpoo\Celula.h:40:1: error: expected ';' after class definition
 }
 ^
C:\Users\Luis Freitas\Desktop\trabpoo\Celula.h: In constructor 'Celula::Celula(int, int, char)':
C:\Users\Luis Freitas\Desktop\trabpoo\Celula.h:19:5: error: 'lot' was not declared in this scope
     lot = 1;
     ^~~
C:\Users\Luis Freitas\Desktop\trabpoo\Celula.h:27:11: error: 'LOT' was not declared in this scope
     lot = LOT;
           ^~~
C:\Users\Luis Freitas\Desktop\trabpoo\Mapa.h: At global scope:
C:\Users\Luis Freitas\Desktop\trabpoo\Mapa.h:78:1: error: expected ';' after class definition
 }
 ^
C:\Users\Luis Freitas\Desktop\trabpoo\Mapa.h:26:2: error: default argument missing for parameter 3 of 'Mapa::Mapa(int, int, std::vector<char>)'
  Mapa( int linhas0 = 10, int colunas0 = 20,std::vector<char> m);
  ^~~~
